2004-12-03  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Check with -L C++, not -L ANSI_C.
	* Makefile.in (header-msg): Change recommended gperf version to
	3.0.1 or more recent.

2004-11-12  John W. Eaton  <jwe@octave.org>

	* Back off on -ffloat-store until we decide whether it is really
	necessary.

2004-11-11  John W. Eaton  <jwe@octave.org>

	* (OCTAVE_PROG_GNUPLOT): Don't set GNUPLOT_BINARY before calling
	AC_CHECK_PROGS(GNUPLOT_BINARY, ...).

	* configure.in: Use it to see if the C, C++, and Fortran compilers
	accept -ffloat-store.
	* aclocal.m4 (OCTAVE_F77_FLAG): New macro.

2004-09-08  John W. Eaton  <jwe@octave.org>

	* configure.in (GXX_PICKY_FLAGS): Remove -fno-nonnull-objects.
	(GCC_PICKY_FLAGS): Remove -Wnested-externs -Wid-clash-31.
	From Quentin Spencer <qspencer@ieee.org>.

	* configure.in (GCC_PICKY_FLAGS): Remove -Winline.

2004-09-07  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for round.

2004-06-22  David Bateman  <dbateman@free.fr>

	* configure.in: Use -Wl,-Bsymbolic for MKOCTFILE_DL_LDFLAGS on
	GNU/Linux systems but not for SH_LDFLAGS.
    
2004-04-22  John W. Eaton  <jwe@octave.org>

	* configure.in: Add -Wl,-Bsymbolic to SH_LDFLAGS for GNU/Linux
	systems.  From Fredrik Lingvall <Fredrik.Lingvall@signal.uu.se>.

	* mkoctfile.in: Allow -Wx,option style options to be passed to the
	compiler.  From Al Niessner <Al.Niessner@jpl.nasa.gov>.

2004-04-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Delete code for --with-ieee754.
	Use OCTAVE_IEEE754_DATA_FORMAT.

	* aclocal.m4 (OCTAVE_IEEE754_DATA_FORMAT): New macro, based on
	configure.in code for HAVE_IEEE754_COMPLIANCE.

2004-04-06  David Bateman  <dbateman@free.fr>

  	* configure.in : add the option --with-ieee754 and use it to define
	HAVE_IEEE754_COMPLIANCE

2004-04-02  David Bateman  <dbateman@free.fr>

	* configure.in: Warn about g++ 2.9x versions.

2004-04-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
